[package]
name = "rust_audio_api"
version = "0.1.0"
edition = "2021"

[[dependencies]
symphonia = { version = "0.5", features = ["aac", "mp3", "flac"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
hyper = "1.0"
tempfile = "3"
bytes = "1"
tower = "0.4"
serde_json = "1.0"

